--- a/Project_Beom/Project_Beom/Project_Beom.vcxproj
+++ b/Project_Beom/Project_Beom/Project_Beom.vcxproj
@@ -165,6 +165,8 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GdiImage.h" />
     <ClInclude Include="GdiManager.h" />
+    <ClInclude Include="GdiPlusImage.h" />
+    <ClInclude Include="GdiPlusManager.h" />
     <ClInclude Include="KeyManager.h" />
     <ClInclude Include="Macro.h" />
     <ClInclude Include="Maingame.h" />
@@ -178,6 +180,7 @@
     <ClInclude Include="Struct.h" />
     <ClInclude Include="System.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TestScene.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="TimerManager.h" />
   </ItemGroup>
@@ -190,6 +193,8 @@
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GdiImage.cpp" />
     <ClCompile Include="GdiManager.cpp" />
+    <ClCompile Include="GdiPlusImage.cpp" />
+    <ClCompile Include="GdiPlusManager.cpp" />
     <ClCompile Include="KeyManager.cpp" />
     <ClCompile Include="Maingame.cpp" />
     <ClCompile Include="ObjectManager.cpp" />
@@ -203,6 +208,7 @@
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="System.cpp" />
+    <ClCompile Include="TestScene.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="TimerManager.cpp" />
   </ItemGroup>
