--- a/Project_Beom/Project_Beom/Project_Beom.vcxproj.filters
+++ b/Project_Beom/Project_Beom/Project_Beom.vcxproj.filters
@@ -180,6 +180,12 @@
     <ClInclude Include="TestScene.h">
       <Filter>03.Scene</Filter>
     </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>02.GameObejct\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="Background.h">
+      <Filter>02.GameObejct\Background</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Project_Beom.cpp">
@@ -244,6 +250,12 @@
     </ClCompile>
     <ClCompile Include="TestScene.cpp">
       <Filter>03.Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>02.GameObejct\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="Background.cpp">
+      <Filter>02.GameObejct\Background</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
